# CollabTool

./: CollabToolApp.h  Makefile  Makefile.am  Makefile.mac  Makefile.mgw  README  README.txt  TODO  collabtool.nsi  config.h  configure.ac
contrib/vnc_winsrc/: CollabKit-README.txt
contrib/vnc_winsrc/vncviewer/Debug/: RCa00888
contrib/vnc_winsrc/winvnc/: WinVNC.cpp
contrib/vnc_winsrc/winvnc/Debug/: BuildLog.htm  RCa00724  VNCHooks.exp  VNCHooks.ilk  VNCHooks.res  omnithread.lib
debian/: changelog  control  copyright  menu  rules  watch.ex
gui/: FrameMain.h  MyDialogSettings.cpp  MyDialogSettings.h  MyFrameMain.cpp
src/: CollabToolApp.cpp  CollabToolApp.h  Makefile.am  collabtool.desktop  config.h
src/contrib/: README.txt
src/contrib/vnc_winsrc/vncviewer/Debug/: BuildLog.htm
src/contrib/vnc_winsrc/winvnc/: WinVNC.h
src/contrib/vnc_winsrc/winvnc/Debug/: RCa01976  VNCHooks.lib  WinVNC.res  libjpeg.lib  mt.dep  vc80.idb  zlib.lib
src/contrib/vnc_winsrc/winvnc/Release/: BuildLog.htm
src/gui/: FrameMain.cpp  FrameMain.h  MyDialogSettings.cpp  MyFrameMain.cpp  MyFrameMain.h  collabtool.wxg
src/wxServDisc/: README.TXT
